# health-qa-summative

./: .gitignore  README.md  health_qa_summative_colab.ipynb  pyproject.toml  requirements.txt
configs/: afriteva_lora_smoke.yaml  afriteva_smoke.yaml  afriteva_weak.yaml  afriteva_weak_lora.yaml  afriteva_weak_lora_fast_predict.yaml  afriteva_weak_lora_stable.yaml  baseline.yaml  colab_afriteva_v2_lora_full.yaml  colab_mt5_base_lora_full.yaml  local_afrie5_bge_rerank.yaml  local_retrieval.yaml  local_retrieval_char13.yaml  local_retrieval_char24.yaml  local_retrieval_e5_rerank.yaml  local_retrieval_ensemble.yaml  local_retrieval_mpnet_rerank.yaml  local_retrieval_mpnet_scoped.yaml  local_retrieval_mpnet_union_rerank.yaml  local_retrieval_neural_rerank.yaml  local_retrieval_subset.yaml  local_retrieval_subset_sweep.yaml  local_retrieval_subset_tuned.yaml  next.yaml
notebooks/: colab_predict_saved_model.ipynb  colab_seq2seq_lora_finetune.ipynb  health_qa_summative_colab.ipynb
reports/: deliverables_checklist.md  demo_outline.md  experiment_log.csv  experiment_strategy.md  leaderboard_progression.csv  report_outline.md
scripts/: analyze_candidate_pool.py  hybrid_input_predictions.py  llm_gate_candidates.py  merge_subset_predictions.py  nllb_translate_candidates.py  postprocess_predictions.py  run_afrie5_bge_rerank.py  run_neural_rerank.py  run_ollama_candidates.py  run_union_rerank.py  sweep_hybrid_rules.py  sweep_neural_rerank.py  sweep_retrieval.py  train_candidate_reranker.py  train_candidate_selector.py
submissions/: README.md
tests/: test_afrie5_bge_rerank.py  (+6 more)
(+10 files in other folders)
